[gd_scene load_steps=12 format=3 uid="uid://b2cb3xhi7pmuc"]

[ext_resource type="Script" path="res://scripts/models/level_manager.gd" id="1_6y5rj"]
[ext_resource type="Script" path="res://scripts/models/overlay.gd" id="2_b0q4q"]
[ext_resource type="FontFile" uid="uid://ixtywg4cu03n" path="res://assets/fonts/sonic-3-knuckles-hud-font.ttf" id="4_la1pg"]
[ext_resource type="Texture2D" uid="uid://bchmnmnq5ep5k" path="res://assets/characters/sonic/sonic_lives_icon.png" id="5_1my5d"]
[ext_resource type="FontFile" uid="uid://dxv35e0fhnnc7" path="res://assets/fonts/sonic-1-2-game-over.ttf" id="5_pyikb"]

[sub_resource type="LabelSettings" id="LabelSettings_3lvmr"]
font = ExtResource("4_la1pg")
font_size = 14
font_color = Color(1, 1, 0, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_n71pt"]
font = ExtResource("4_la1pg")
font_size = 14
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_14r8u"]
font = ExtResource("5_pyikb")

[sub_resource type="LabelSettings" id="LabelSettings_ictwc"]
font = ExtResource("5_pyikb")

[sub_resource type="Animation" id="Animation_dox05"]
resource_name = "game_over"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOver:theme_override_constants/separation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [350, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d05f5"]
_data = {
"game_over": SubResource("Animation_dox05")
}

[node name="Game" type="Node"]

[node name="LevelManager" type="Node" parent="."]
script = ExtResource("1_6y5rj")

[node name="Time" type="Timer" parent="LevelManager"]
wait_time = 600.0
one_shot = true

[node name="Overlay" type="Control" parent="LevelManager"]
z_index = 20
custom_minimum_size = Vector2(320, 224)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_b0q4q")

[node name="StatBar" type="HBoxContainer" parent="LevelManager/Overlay"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -164.0
offset_right = 164.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Stats" type="VBoxContainer" parent="LevelManager/Overlay/StatBar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_constants/separation = -2

[node name="Score" type="RichTextLabel" parent="LevelManager/Overlay/StatBar/Stats"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_offset_x = 1
theme_override_fonts/normal_font = ExtResource("4_la1pg")
bbcode_enabled = true
text = "[color=yellow]SCORE[/color] 999999"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
metadata/_edit_use_anchors_ = true

[node name="Time" type="RichTextLabel" parent="LevelManager/Overlay/StatBar/Stats"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_offset_x = 1
theme_override_fonts/normal_font = ExtResource("4_la1pg")
bbcode_enabled = true
text = "[color=yellow]TIME[/color] 00:00"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
metadata/_edit_use_anchors_ = true

[node name="Rings" type="RichTextLabel" parent="LevelManager/Overlay/StatBar/Stats"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_offset_x = 1
theme_override_fonts/normal_font = ExtResource("4_la1pg")
bbcode_enabled = true
text = "[color=yellow]RINGS[/color] 9999"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
metadata/_edit_use_anchors_ = true

[node name="PlayerLives" type="HBoxContainer" parent="LevelManager/Overlay/StatBar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 6
alignment = 2

[node name="Icon" type="TextureRect" parent="LevelManager/Overlay/StatBar/PlayerLives"]
layout_mode = 2
texture = ExtResource("5_1my5d")
stretch_mode = 5

[node name="PlayerLivesLabel" type="VBoxContainer" parent="LevelManager/Overlay/StatBar/PlayerLives"]
layout_mode = 2
theme_override_constants/separation = -5
alignment = 2

[node name="Player" type="Label" parent="LevelManager/Overlay/StatBar/PlayerLives/PlayerLivesLabel"]
layout_mode = 2
size_flags_horizontal = 8
text = "SONIC"
label_settings = SubResource("LabelSettings_3lvmr")
horizontal_alignment = 2

[node name="Lives" type="Label" parent="LevelManager/Overlay/StatBar/PlayerLives/PlayerLivesLabel"]
layout_mode = 2
size_flags_horizontal = 8
text = "x   3"
label_settings = SubResource("LabelSettings_n71pt")
horizontal_alignment = 2

[node name="GameOver" type="HBoxContainer" parent="LevelManager/Overlay"]
clip_contents = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 350
alignment = 1

[node name="Game" type="Label" parent="LevelManager/Overlay/GameOver"]
layout_mode = 2
text = "GAME"
label_settings = SubResource("LabelSettings_14r8u")

[node name="Over" type="Label" parent="LevelManager/Overlay/GameOver"]
layout_mode = 2
text = "OVER"
label_settings = SubResource("LabelSettings_ictwc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelManager/Overlay"]
libraries = {
"": SubResource("AnimationLibrary_d05f5")
}
